
PIG-4925: Support for passing the bloom filter to the Bloom UDF (rohini)

PIG-4911: Provide option to disable DAG recovery (rohini)

PIG-4906: Add Bigdecimal functions in Over function (cgalan via daijy)

PIG-2768: Fix org.apache.hadoop.conf.Configuration deprecation warnings for Hadoop 23 (rohini)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-5056: Fix AvroStorage writing enums (szita via daijy)

PIG-5055: Infinite loop with join by fixed index (knoguchi)

PIG-5049: Cleanup e2e tests turing_jython.conf (Daniel Dai)

PIG-5033: MultiQueryOptimizerTez creates bad plan with union, split and FRJoin (rohini,tmwoordruff via rohini)

PIG-4934: SET command does not work well with deprecated settings (szita via daijy)

PIG-4798: big integer literals fail to parse (szita via daijy)

PIG-5045: CSVExcelStorage Load: A Quoted Field with a Single Escaped Quote """" Becomes "" This should become " instead
  (szita via daijy)

PIG-5026: Remove src/META-INF/services/org.apache.hadoop.mapreduce.protocol.ClientProtocolProvider (nkollar via daijy)

PIG-5041: RoundRobinPartitioner is not deterministic when order of input records change (rohini)

PIG-5040: Order by and CROSS partitioning is not deterministic due to usage of Random (rohini

PIG-5038: Pig Limit_2 e2e test failed with sort check (Konstantin_Harasov via rohini)

PIG-5039: TestTypeCheckingValidatorNewLP.TestTypeCheckingValidatorNewLP is failing (nkollar via knoguchi)

PIG-3087: Refactor TestLogicalPlanBuilder to be meaningful (szita via daijy)

PIG-4976: streaming job with store clause stuck if the script fail (daijy via knoguchi)

PIG-5035: killJob API does not work in Tez (zjffdu via rohini)

PIG-5032: Output record stats in Tez is wrong when there is split followed by union (rohini)

PIG-5031: Tez failing to compile when replicate join is done with a limit vertex on left (knoguchi)

PIG-5019: Pig generates tons of warnings for udf with enabled warnings aggregation (murshyd via rohini)
